--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,17 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+            "styles": [     
+              "./node_modules/bootstrap/dist/css/bootstrap.css",              
+              "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/js/scripts.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -88,9 +95,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/bootswatch/dist/cyborg/bootstrap.css",          
+              "./node_modules/bootstrap/dist/css/bootstrap.css",              
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "src/styles.css"          
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         },
         "lint": {
@@ -119,6 +133,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "MusicIQ"
+    }
+  },
+  "defaultProject": "MusicIQ",
+  "cli": {
+    "analytics": "dbb4cd78-0c19-4a68-a340-19bafb4d81e6"
+  }
 }
