--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [     
-              "./node_modules/bootstrap/dist/css/bootstrap.css",              
+            "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
@@ -95,10 +95,10 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootswatch/dist/cyborg/bootstrap.css",          
-              "./node_modules/bootstrap/dist/css/bootstrap.css",              
+              "./node_modules/bootswatch/dist/cyborg/bootstrap.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.css"          
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
@@ -131,6 +131,10 @@
               "devServerTarget": "MusicIQ:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
